# calendar-auto-register

./: .dockerignore  .env.deploy.example  .env.example  .env.local.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yaml
app/src/: hello.py
app/src/calendar_auto_register/: __init__.py  app.py  main.py
app/src/calendar_auto_register/clients/: __init__.py  bedrock_client.py  google_client.py  http_client.py  line_client.py  s3_client.py  ses_client.py
app/src/calendar_auto_register/core/: logging.py  middleware.py  models.py  prompts.py  settings.py
app/src/calendar_auto_register/features/calendar_events/: __init__.py  router_calendar_events.py  schemas_calendar_events.py  usecase_calendar_events.py
app/src/calendar_auto_register/features/line_notify_post/: __init__.py  router_line_notify_post.py  schemas_line_notify_post.py  usecase_line_notify_post.py
app/src/calendar_auto_register/features/llm_extract/: __init__.py  router_llm_extract.py  schemas_llm_extract.py  usecase_llm_extract.py
app/src/calendar_auto_register/features/mailparse_post/: __init__.py  router_mailparse_post.py  schemas_mailparse_post.py  (+1 more)
app/src/calendar_auto_register/shared/: __init__.py
app/src/dotenv/: __init__.py
app/src/tests/: test_healthz.py
app/tests/: conftest.py
app/tests/calendar_auto_register/app/: test_healthz.py
app/tests/calendar_auto_register/core/: test_middleware.py
docker/: Dockerfile  Dockerfile.local
docs/: architecture.drawio
infra/sam/: samconfig.toml  template.yaml
scripts/: sam-deploy.sh
(+8 files in other folders)
