[project]
name = "calendar-auto-register"
version = "0.1.0"
description = "Serverless FastAPI service that parses emails and registers Google Calendar events."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "httpx>=0.27.0,<0.28.0",
    "fastapi>=0.115.0,<1.0.0",
    "mangum>=0.17.0,<0.19.0",
    "pydantic>=2.8.0,<3.0.0",
    "uvicorn>=0.30.0,<1.0.0",
    "boto3>=1.34.0,<2.0.0",
    "google-auth>=2.35.0,<3.0.0",
    "google-api-python-client>=2.132.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11.0,<2.0.0",
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "ruff>=0.6.0,<1.0.0",
]

[project.scripts]
calendar-auto-register-api = "calendar_auto_register.main:run_local"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "app/src"

[tool.setuptools.packages.find]
where = ["app/src"]

[tool.setuptools.package-data]
"calendar_auto_register" = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.lint.isort]
known-first-party = ["calendar_auto_register"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
mypy_path = "app/src"
explicit_package_bases = true
namespace_packages = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["app/src"]
